<resources>
    <string name="app_name">Blog</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="back">بازگشت</string>
    <string name="title">title</string>
    <string name="home">home</string>
    <string name="message">message</string>
    <string name="profile">profile</string>
    <string name="notification">notification</string>
    <string name="settings">setting</string>
    <string name="favorites">favorite</string>
    <string name="posts">پست ها</string>
    <string name="albums">آلبوم ها</string>
    <string name="profile_fa">پروفایل</string>
    <string name="Comments">کامنت ها</string>
    <string name="comments">نظرات</string>
    <string name="username">نام کاربری</string>
    <string name="email">ایمیل</string>
    <string name="exit">خروج</string>
    <string name="login">ورود</string>
    <string name="edit">ویرایش</string>
    <string name="adress">تهران - ولنجک - بلوار دانشجو</string>
    <string name="uni">دانشگاه شهید بهشتی</string>
    <string name="website">https://github.com/HaniyeMollaei</string>
    <string name="email_value">HaniyeMolaei1378@gmail.com</string>
    <string name="user_value">Haniye_Mli</string>
    <string name="name_value">هانیه ملائی</string>
    <string name="comment">comments</string>
    <string name="blog_time">Blog Time</string>
    <string name="logo">logo</string>
    <string name="username_en">Username</string>
    <string name="email_en">Email</string>
    <string name="name_en">Name :</string>
    <string name="not_available">Not Available</string>
    <string name="website_en">Website</string>
    <string name="company_en">Company</string>
    <string name="address_en">Address</string>
    <string name="phone_en">Phone</string>
    <string name="edit_en">Edit</string>
    <string name="image">image</string>
    <string name="exit2">Exit</string>
    <string name="log_out">Log Out</string>
    <string name="exit_en">Exit</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="feed">Feed</string>
</resources>