<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="@drawable/silver_background"
    tools:context=".activity.MainHandler">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_weight="0.46"
        android:background="@color/colorPrimaryDark">
        <ImageView
            android:id="@+id/logo"
            android:padding="2dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/logo"
            android:layout_weight="0.4"
            android:layout_gravity="left"
            android:contentDescription="@string/posts" />
        <TextView
            android:id="@+id/logo_txt"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.2"
            android:textColor="@color/colorPrimaryLight"
            android:textSize="18sp"
            android:text="@string/blog_time"
            android:textStyle="bold"
            android:gravity="center"
            android:contentDescription="@string/albums" />
        <TextView
            android:id="@+id/frag"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.4"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:text="@string/feed"
            android:textStyle="bold"
            android:gravity="center"
            android:contentDescription="@string/profile" />
    </LinearLayout>


    <FrameLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.08"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_weight="0.46"
        android:background="@color/colorPrimaryDark">
        <ImageView
            android:id="@+id/post_btn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/post"
            android:layout_weight="0.33"
            android:contentDescription="@string/posts" />
        <ImageView
            android:id="@+id/album_btn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/album"
            android:layout_weight="0.33"
            android:contentDescription="@string/albums" />
        <ImageView
            android:id="@+id/profile_btn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.33"
            android:src="@drawable/profile"
            android:contentDescription="@string/profile" />
    </LinearLayout>
</LinearLayout>