<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >
    <ImageView
        android:id="@+id/photo"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/logo"
        android:layout_weight="0.08"
        android:contentDescription="@string/image" />

    <TextView
        android:id="@+id/photo_title"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:textSize="12sp"
        android:textColor="@color/colorPrimaryDark"
        android:layout_weight="0.46"
        android:paddingEnd="10dp"
        android:paddingStart="10dp"
        android:layout_margin="5dp"

        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.46"
        android:orientation="horizontal"
        android:background="@color/colorPrimaryLight">
        <Button
            android:id="@+id/prev"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:text="@string/previous"
            android:textSize="14sp"
            android:textColor="@color/colorPrimaryDark"
            style="@style/Widget.AppCompat.Button.Borderless"
            />
        <Button
            android:id="@+id/next"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:text="@string/next"
            android:textSize="14sp"
            android:textColor="@color/colorPrimaryDark"
            style="@style/Widget.AppCompat.Button.Borderless"
            />
    </LinearLayout>

</LinearLayout>